# autobahn

./: .gitignore  DR-001-design-conversation.txt  Justfile  README.md  brief.md  flake.nix  pyproject.toml  spec-driver
.agents/: spec-driver-boot.md
.claude/: settings.local.json
.spec-driver/: workflow.toml
.spec-driver/audits/AUD-001-de_001_conformance_audit/: AUD-001.md
.spec-driver/audits/AUD-002-de_002_conformance_audit/: AUD-002.md
.spec-driver/audits/AUD-003-de_003_schema_reconciliation_conformance/: AUD-003.md
.spec-driver/audits/AUD-004-de_004_conformance_audit_review_operations/: AUD-004.md
.spec-driver/decisions/: ADR-001-spec_driver_schema_authority_and_autobahn_extension_contract.md  ADR-002-python_public_api_boundary_cli_for_agents_library_imports_for_orchestrators.md
.spec-driver/decisions/accepted/: ADR-001-spec_driver_schema_authority_and_autobahn_extension_contract.md
.spec-driver/deltas/DE-001-repository_bootstrap_and_architecture_foundation/: DE-001.md  DR-001.md  IP-001.md  notes.md
.spec-driver/deltas/DE-001-repository_bootstrap_and_architecture_foundation/phases/: phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md
.spec-driver/deltas/DE-002-internal_hardening_and_session_persistence/: DE-002.md  DR-002.md  IP-002.md  notes.md
.spec-driver/deltas/DE-002-internal_hardening_and_session_persistence/phases/: phase-01.md  phase-02.md
.spec-driver/deltas/DE-003-schema_reconciliation_with_spec_driver_de_108_109_110/: DE-003.md  DR-003.md  IP-003.md  notes.md
.spec-driver/deltas/DE-003-schema_reconciliation_with_spec_driver_de_108_109_110/phases/: phase-01.md
.spec-driver/deltas/DE-004-review_operations/: DE-004.md  DR-004.md  IP-004.md  notes.md
.spec-driver/deltas/DE-004-review_operations/phases/: phase-01.md  phase-02.md
.spec-driver/memory/: mem.pattern.project.spec-driver-integration.md
.spec-driver/registry/: decisions.yaml  deltas.yaml
.spec-driver/revisions/RE-001-sandbox_adapter_layer_removed_from_autobahn_scope/: RE-001.md
autobahn/adapters/harness/: __init__.py  claude_code.py  protocol.py
autobahn/adapters/session/: __init__.py  protocol.py  subprocess_backend.py
autobahn/api/: __init__.py  functions.py
autobahn/artifacts/: __init__.py  loader.py  schema.py  writer.py
autobahn/models/: artifacts.py  enums.py  errors.py  runtime.py
autobahn/runtime/: reconcile.py  supervisor.py  transition.py
tests/: test_api.py  test_artifacts.py  test_coupling.py  test_enums.py  test_harness_claude_code.py  test_integration.py  test_loader.py  test_models.py  test_reconcile.py  test_smoke.py  test_subprocess_backend.py  test_writer.py
tests/fixtures/workflow/: handoff.current.yaml  review-findings.yaml  review-index.yaml  sessions.yaml  state.yaml
